[package]
name = "monkey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "lib/lib.rs"

[[bin]]
name = "repl"
path = "repl/main.rs"

[dependencies]
rustyline = "10.0.0"
thiserror = "1.0.33"

